Account verification UI

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         <input type="number" class="input" min="0" max="9" />
       </div>
       <div class="description">
-        <p>
-          this is not a real database info Lorem ipsum dolor sit, amet ceat
-          fugit inventore volup
-        </p>
+        <p>this is not a real database info</p>
       </div>
     </div>
     <script src="app.js"></script>
